some spacing issues left

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,62 +4,125 @@
 .headerClass {
 	background-color: #ffffff;
 	text-align: center;
-	height: 100px;
-	padding: 50px;
-	border-bottom-style: solid;
-	border-bottom-width: 3px;
-	border-bottom-color: #eee;
+	height: 70px;
+	width: 960px;
+	padding: 0px 0px 2px 0px;
+	border-bottom: solid lightgray 3px;
 	margin: 0 auto;
 }
 
 
-#jDaniel {
+.jDaniel {
 	float: left;
 	background-color: #4aaaa5;
-	padding: 20px;
+	padding: 20px 0px 20px 0px;
+	width: 250px;
 	font-family: 'Georgia', Times, Times New Roman, serif;
-	font-size: 36px;
+	font-size: 28px;
 	font-weight: bold;
-	
+	color: #eee;
+	margin-left: 25px;
 }
 
-#topnav {
+.topnav {
 	float: right;
-	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	padding: 25px 25px 0px 0px;
+	width: 300px;
 }
 
+.topnav a {
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	color: #777777;
+	text-decoration: none;
+	font-size: 20px;
+	padding: 10px;
+}
 
 .bodyClass {
-	background-color: #333333;
-	width: 960px;
-	margin: 0 auto;
+	background-image: url("../images/witewall_3.png");
+	background-color: red;
 
+	width: 960px;
+	height: 640px;
+	margin: 0 auto;
+	padding: 0px;
 }
 
 #aboutMain {
 	background-color: #ffffff;
-	width: 500px;
+	width: 580px;
 	float: left;
+	padding: 0px 0px 0px 20px;
+	margin: 25px 0px 0px 25px;
 }
 
+
+#headshot {
+	width: 200px;
+	height: 200px;
+	float: left;
+	padding: 20px;
+}
+
+
+#aboutMain h1 {
+	border-bottom: 3px solid lightgray;
+	color: #4aaaa5;
+	line-height: 56px;
+	margin-right: 20px;
+}
+
+#aboutMain p {
+	padding: 0px;
+	margin: 0 auto;
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	line-height: 40px;
+	color: #777777;
+	text-decoration: none;
+	font-size: 20px;
+	padding: 0px 20px 20px 20px;
+}
 
 
 #connectAside {
 	background-color: #ffffff;
-	width: 350px;
+	width: 270px;
 	float: right;
+	color: #4aaaa5;
+	text-align: center;
+	line-height: 56px;
+	margin: 40px 25px 0px 0px;
+
+}
+
+#connectAside h1 {
+	border-bottom: 3px solid lightgray;
+	margin: 0px 20px 0px 20px;
+}
+
+#connectIcons {
+	padding: 20px 0px 0px 0px;
 }
 
 
+.clearclass {
+	clear: both;
+}
 
 
 .footer {
 	clear: both; 
 	background-color: #666666;
+	width: 960px;
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	font-size: 11px;
+	color: #eee;
 	text-align: center;
-	padding: 20px;
+	line-height: 22px;
+	padding: 0px;
+	height: 60px;
 	border-top-style: solid;
 	border-top-width: 10px;
 	border-top-color: #4aaaa5;
-
+	margin: 0 auto;
 }
